fixed spacing between top and bottom content, changed shoes size bigger

--- a/src/style.scss
+++ b/src/style.scss
@@ -76,10 +76,11 @@ body {
     border-radius: 50px 50px 0px 0px;
 
     .row {
-        padding-top: 132px;
-        padding-bottom: 132px;
+        padding-top: 100px;
+        padding-bottom: 100px;
 
         #header-banner__left {
+            margin-top: 30px;
             h1 {
                 font-size: 4.6875rem;
                 letter-spacing: 0px;
@@ -114,7 +115,7 @@ body {
         }
 
         #header-banner__right {
-            margin-left: 25%;
+            margin-left: 12.5%;
 
             #banner__right-carousel {
                 .carousel-item {
